testsuite/tests/indexed-types/should_fail/T8155.stderr

T8155.hs:27:14: error: [GHC-39999]
    • Could not deduce ‘Integral (BoundsOf (a -> a))’
        arising from a use of ‘buildV’
      from the context: Num a
        bound by the instance declaration at T8155.hs:26:10-32
    • In the expression: buildV
      In an equation for ‘build'’: build' = buildV
      In the instance declaration for ‘Build (a -> a)’
